kubernetes/deployment.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: tvshows-deployment
  namespace: kiii
  labels:
    app: tvshows
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tvshows
  template:
    metadata:
      labels:
        app: tvshows
    spec:
      containers:
        - name: tvshows
          image: iskrana/final_project:latest
          ports:
            - containerPort: 8000
          imagePullPolicy: Always
