kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: tvshows-service
  namespace: kiii
spec:
  selector:
    app: tvshows
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
